# cycling-coach-api

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260404_0001_initial_auth_foundation.py  20260405_0002_strava_oauth_and_activities.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: athletes.py  auth.py  health.py  strava.py
src/app/core/: config.py  logging.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  athlete.py  oauth_connection.py  session.py  strava_activity.py  sync_job.py  user.py  workout.py
src/app/repositories/: athlete.py  oauth_connection.py  session.py  strava_activity.py  user.py
src/app/schemas/: athlete.py  auth.py  common.py  strava.py
src/app/services/: athlete.py  auth.py  strava.py
tests/: test_health.py  test_security.py  test_strava_service.py
